bad/incr_arr_elem_class.example_compiler_output
ERROR
[1mbad/incr_arr_elem_class.lat:6:15: [1;31merror: [0;1m++ operator is valid only for integer values not `Y`[m
	(new Y[3])[1]++;
	             [1;32m^[m
